<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Begin"
    android:background="@drawable/dark_bg">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="114dp"
        android:layout_marginTop="124dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/title_up"
        android:textColor="#e2b935"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/title_down"
        android:textColor="#e2b935"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="108dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#000000"
        android:text="@string/play"
        android:onClick="start"
        android:textColor="#C0C0C0"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/caption"
        android:textColor="#C0C0C0"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</android.support.constraint.ConstraintLayout>